--- a/_data/data.yml
+++ b/_data/data.yml
@@ -1,5 +1,5 @@
 basic:
-  name: Foo Bar                      # name
+  name: Xian Yi                      # name
   title: Backend Developer           # job title
   avatar:
     show: true                       # show or hide avatar
@@ -7,7 +7,7 @@ basic:
 
 contact:
   # meta
-  location: Beijing, China # location
+  location: Shanghai, China # location
   email: me@example.com    # email address
   phone: +86-111-2222-3333 # phone number, format is "+[Country Code] [Area Code (if applicable)] [Local Phone Number]"
   website: example.com     # site URL without schema, like example.com, will automatically prepand "https://"
