--- a/_data/cn.yml
+++ b/_data/cn.yml
@@ -1,22 +1,22 @@
 basic:
-  name: x y                 # name
-  title: Backend Developer           # job title
+  name: xy                      # name
+  title: 后端工程师           # job title
   avatar:
     show: true                       # show or hide avatar
     path: /assets/images/profile.png # avatar file path
 
 contact:
   # meta
-  location: Shanghai, China # location
+  location: 上海 # location
   email: x@qq.com    # email address
-  phone: +86-172xxxxxxxx # phone number, format is "+[Country Code] [Area Code (if applicable)] [Local Phone Number]"
+  phone: 123 # phone number, format is "+[Country Code] [Area Code (if applicable)] [Local Phone Number]"
   website:      # site URL without schema, like example.com, will automatically prepand "https://"
 
-  gender: Male                 # gender or pronoun
-  birthday: 1995               # birthday
+  gender: 男                 # gender or pronoun
+  birthday: xxxx.xx               # birthday
   # nationality: Han            # nationality
 
-  # # contact
+  # contact
   # wechat: x                 # username
   # whatsapp: y               # 8611122223333     | https://wa.me/8611122223333
   # telegram: s               # username          | https://t.me/username
@@ -70,157 +70,150 @@ contact:
   goodreads:               # username          | https://www.goodreads.com/user/show/username
   strava:                  # useid             | https://www.strava.com/athletes/userid
 
-profile:
+education:
   show: true
   order: 1
-  title: Profile
-  description: |
-    The profile section in a resume is a brief summary of the applicant's skills, qualifications, and experience. The purpose of this section is to provide a snapshot of the applicant's professional background and highlight their most relevant accomplishments and strengths. It may include information such as the applicant's career objectives, years of experience, areas of expertise, and key achievements.
+  title: 教育背景
+  # description: |
+  #   The education section in a resume is where you provide information about your academic background, including any degrees. In this section, you should include the name and location of the institution where you received your degree, the name of the degree or program you completed, and the date of graduation. If you have earned multiple degrees, list them in reverse chronological order, with the most recent degree first.
 
-    A well-crafted profile section can help to grab the attention of potential employers and encourage them to read on and learn more about the applicant's qualifications and experience.
+  #   In addition to basic information about your education, you may also want to include any academic honors or awards you received, relevant coursework or projects, and your GPA if it is 3.0 or above. If you have recently graduated and do not have much work experience yet, highlighting your education and academic achievements can help demonstrate your potential to succeed in the workplace.
+
+  items:
+    - institution: buaa
+      link: '#'
+      date: 2013 - 2017
+      major: air
+      degree: 本科
+      # description: |
+      #   Additional information for this institution.
+      #   + First
+      #   + Second
+
+    - institution: buaa
+      link:
+      date: 2017 - 2020
+      major: ai
+      degree: 研究生
+      # description: |
+      #   Additional information for this institution.
+      #   + First
+      #   + Second
+
+skill:
+  show: true
+  order: 2
+  title: 专业技能
+  description: |
+    - lol
+    - dota2
+
+  # items:
+  #   - name: Skill A
+  #     level: 5
+  #   - name: Skill B
+  #     level: 4
+  #   - name: Skill C
+  #     level: 3
+  #   - name: Skill D
+  #     level: 4
+  #   - name: Skill E
+  #     level: 3
+  #   - name: Skill F
+  #     level: 1
+  #   - name: Skill G
+  #     level: 4
+  #   - name: Skill H
+  #     level: 4
+  #   - name: Skill I
+  #     level: 3
+
+  # groups:
+  #   - name: Group A Skills
+  #     item:
+  #       - Skill A
+  #       - Skill B
+  #       - Skill C
+  #       - Skill D
+  #   - name: Group B Skills
+  #     item:
+  #       - Skill E
+  #       - Skill F
+  #       - Skill G
+  #   - name: Group C Skills
+  #     item:
+  #       - Skill H
+  #       - Skill I
+
+profile:
+  show: false
+  order: 5
+  title: Profile 简介
+  description: |
+    本人毕业于北航，有人工智能算法、数据、后端等不同领域经验
 
 experience:
   show: true
-  order: 2
-  title: Experiences
-  description: |
-    The experiences section in a resume is a section where you list your previous work experiences and accomplishments. It typically includes information about your previous job titles, companies you worked for, the dates of your employment, and your key responsibilities and achievements in each role. This section is important because it gives potential employers a sense of your work history and the skills and expertise you have developed over time. It can also help demonstrate your ability to contribute value to a new organization based on your past achievements.
+  order: 3
+  title: 工作经历
+  # description: |
+  #   The experiences section in a resume is a section where you list your previous work experiences and accomplishments. It typically includes information about your previous job titles, companies you worked for, the dates of your employment, and your key responsibilities and achievements in each role. This section is important because it gives potential employers a sense of your work history and the skills and expertise you have developed over time. It can also help demonstrate your ability to contribute value to a new organization based on your past achievements.
 
   items:
     - company: Second Company
       link: '#'
-      tags: Full-time
+      # tags: Full-time
       date: 2018.03 - 2019.03
-      role: Backend Developer
+      role: 后端工程师
       location: Beijing
       description: |
-        Your key responsibilities and achievements in the company.
+        主要负责
         + First
         + Second
 
     - company: First Company
       link:
-      tags: Part-time, remote
+      # tags: Part-time, remote
       date: 2017.03 - 2018.03
-      role: Backend Developer
+      role: 算法工程师
       location: Beijing
       description: |
-        Your key responsibilities and achievements in the company.
+        主要负责
         + First
         + Second
 
 project:
   show: true
-  order: 3
-  title: Projects
-  description: |
-    The project section in a resume is a section where you can highlight any significant projects that you have completed during your education, work experience, or personal endeavors. This section provides a detailed description of your projects that can showcase your skills, abilities, and achievements.
+  order: 4
+  title: 项目经历
+  # description: |
+  #   The project section in a resume is a section where you can highlight any significant projects that you have completed during your education, work experience, or personal endeavors. This section provides a detailed description of your projects that can showcase your skills, abilities, and achievements.
 
-    In this section, you should include the name of the project, the role you played in the project, the duration, the tools and technologies you used, the objective of the project, and the outcome or result achieved. You can also include any relevant metrics or data that demonstrate the impact of the project.
+  #   In this section, you should include the name of the project, the role you played in the project, the duration, the tools and technologies you used, the objective of the project, and the outcome or result achieved. You can also include any relevant metrics or data that demonstrate the impact of the project.
 
-    The project section is especially useful for candidates with limited work experience or those looking to highlight specific skills or accomplishments that may not be apparent in other parts of their resume. It can also be beneficial for candidates in technical or creative fields, where projects play a significant role in showcasing their capabilities.
+  #   The project section is especially useful for candidates with limited work experience or those looking to highlight specific skills or accomplishments that may not be apparent in other parts of their resume. It can also be beneficial for candidates in technical or creative fields, where projects play a significant role in showcasing their capabilities.
 
   items:
-    - name: Personal project
-      link: '#'
+    - name: 项目一
+      link: 
       tags:
       date: 2015 - 2017
       description: |
-        Personal project description...
+        项目介绍blabla, 我主要负责
         + First
         + Second
 
-    - name: OSS project
+    - name: 项目二
       link:
-      tags: committer
-      date:
+      tags: 
+      date: 2015 - 2017
       description: |
-        OSS project description...
-        + First
-        + Second
-
-skill:
-  show: true
-  order: 4
-  title: Skills
-  description: |
-    The skills section in a resume is a dedicated section where you can list out the various skills that you possess that are relevant to the job you are applying for. This section allows you to highlight your strengths and demonstrate your capabilities to potential employers.
-
-    The skills section can include both hard skills and soft skills. Hard skills are specific technical abilities or knowledge related to a particular job or industry, such as proficiency in programming languages or experience with certain software programs. Soft skills are more general personal traits and abilities, such as communication skills, leadership, problem-solving, or teamwork.
-
-    When crafting your skills section, it's important to tailor it to the specific job you are applying for, and only include skills that are relevant to the position. This can help catch the attention of the hiring manager and demonstrate that you have the qualifications necessary to succeed in the role.
-
-    There are multiple ways to present your skills here. One way is to show them in a rating format. Another way is to group them together. Alternatively, you can use markdown to format it in a way that you prefer.
-
-  items:
-    - name: Skill A
-      level: 5
-    - name: Skill B
-      level: 4
-    - name: Skill C
-      level: 3
-    - name: Skill D
-      level: 4
-    - name: Skill E
-      level: 3
-    - name: Skill F
-      level: 1
-    - name: Skill G
-      level: 4
-    - name: Skill H
-      level: 4
-    - name: Skill I
-      level: 3
-
-  groups:
-    - name: Group A Skills
-      item:
-        - Skill A
-        - Skill B
-        - Skill C
-        - Skill D
-    - name: Group B Skills
-      item:
-        - Skill E
-        - Skill F
-        - Skill G
-    - name: Group C Skills
-      item:
-        - Skill H
-        - Skill I
-
-education:
-  show: true
-  order: 5
-  title: Education
-  description: |
-    The education section in a resume is where you provide information about your academic background, including any degrees. In this section, you should include the name and location of the institution where you received your degree, the name of the degree or program you completed, and the date of graduation. If you have earned multiple degrees, list them in reverse chronological order, with the most recent degree first.
-
-    In addition to basic information about your education, you may also want to include any academic honors or awards you received, relevant coursework or projects, and your GPA if it is 3.0 or above. If you have recently graduated and do not have much work experience yet, highlighting your education and academic achievements can help demonstrate your potential to succeed in the workplace.
-
-  items:
-    - institution: Example University
-      link: '#'
-      date: 2015 - 2018
-      major: Machine Learning
-      degree: Master
-      description: |
-        Additional information for this institution.
-        + First
-        + Second
-
-    - institution: Example University
-      link:
-      date: 2011 - 2015
-      major: Computer Science
-      degree: Bachelor
-      description: |
-        Additional information for this institution.
+        项目介绍blabla, 我主要负责
         + First
         + Second
 
 certificate:
-  show: true
+  show: false
   order: 6
   title: Certificates
   description: |
@@ -247,7 +240,7 @@ certificate:
         It's my Example Certificate Two by Example.
 
 publication:
-  show: true
+  show: false
   order: 7
   title: Publications
   description: |
@@ -270,7 +263,7 @@ publication:
       link:
 
 award:
-  show: true
+  show: false
   order: 8
   title: Awards
   description: |
@@ -295,7 +288,7 @@ award:
         It's my Example Awared Two by Example.
 
 patent:
-  show: true
+  show: false
   order: 9
   title: Patents
   description: |
@@ -319,7 +312,7 @@ patent:
     + Foo Bar. 2022. Example patent name two. US 654321, filed Oct 3, 2022, and issued Nov 15, 2022.
 
 organization:
-  show: true
+  show: false
   order: 10
   title: Organizations
   description: |
@@ -330,7 +323,7 @@ organization:
     This section can be especially valuable for candidates seeking positions in the non-profit sector, social work, or community engagement roles, where experience in social or cultural organizations can demonstrate a genuine passion for social causes and a willingness to work collaboratively towards social change. However, it is important to only include organizations that are relevant to the job you are applying for, and avoid listing organizations that may be controversial or potentially offensive.
 
 language:
-  show: true
+  show: false
   order: 11
   title: Languages
   description: |
@@ -345,7 +338,7 @@ language:
       level: Professional
 
 interest:
-  show: true
+  show: false
   order: 12
   title: Interests
   description: |
@@ -362,7 +355,7 @@ interest:
       link:
 
 evaluation:
-  show: true
+  show: false
   order: 13
   title: Self-evaluation
   description: |
@@ -373,7 +366,7 @@ evaluation:
     A well-crafted self-evaluation section can demonstrate your self-awareness and confidence in your abilities, as well as your willingness to continuously learn and grow. However, it is important to be honest and avoid over-inflating your skills or qualifications, as this can negatively impact your credibility and the hiring manager's impression of you.
 
 reference:
-  show: true
+  show: false
   order: 14
   title: References
   description: |
